# SysYCompiler2024

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  cmake.sh  gdb.sh  qemu.sh  test.sh  test_asm.sh
antlr/: Doxyfile
config/: gdb.conf
doc/: CodeRefactor.md  Intro.md  Resources.md  Restrict.md  former.md  readme.md  report.md  steps.md
doc/2025/00_intro/: intro.md  sin.c
doc/antlr4/: ANTLR4.md  antlr4.md
doc/arm/: arm.md
doc/backend/: ELFRelocatableObject.md  GraphColoringRA.md  RegisterAllocation.md  Schedule.md  codegen.md  codegen_jiuyuan.md  mirInst.md  nanke.md
doc/frontend/: visit.md
doc/ir/: ADT.md
doc/llvm/: LLVM_Loop.md  atomic.md  llvm_codegen.md  llvm_doc.md  llvm_pass.md  llvmir.md
doc/loop/: LoopExtract.md  LoopParallel.md
doc/misc/: Debug.md  cpp_stl.md  valgrind.md
doc/report/: final.csv  final.ipynb  performance_on_board.csv  report.md  visualize.ipynb
doc/riscv/: learn_riscv.md  riscv.md
doc/submit/: official_docker_readme.md  submit_request.md
doc/transform/: StatelessCache.md
include/autogen/generic/: InstInfoDecl.hpp  InstInfoImpl.hpp
include/autogen/riscv/: ISelInfoDecl.hpp  ISelInfoImpl.hpp  InstInfoDecl.hpp  InstInfoImpl.hpp  RuntimeWithParallelFor.hpp  ScheduleModelDecl.hpp  ScheduleModelImpl.hpp
include/driver/: driver.hpp
include/ir/: Attribute.hpp  ConstantValue.hpp  builder.hpp  function.hpp  global.hpp  infrast.hpp  instructions.hpp  ir.hpp  module.hpp  symboltable.hpp  type.hpp  utils_ir.hpp  value.hpp
include/mir/: BlockLayoutOpt.hpp  CFGAnalysis.hpp  LiveInterval.hpp  MIR.hpp  RegisterAllocator.hpp  RegisterCoalescing.hpp  ScheduleModel.hpp  datalayout.hpp  frameinfo.hpp  instinfo.hpp  iselinfo.hpp  lowering.hpp  registerinfo.hpp  target.hpp  utils.hpp
include/pass/: AnalysisInfo.hpp  pass.hpp
include/pass/analysis/: CFGAnalysis.hpp  CFGPrinter.hpp  ControlFlowGraph.hpp  MarkParallel.hpp  callgraph.hpp  dom.hpp  indvar.hpp  irtest.hpp  loop.hpp  pdom.hpp  sideEffectAnalysis.hpp
include/pass/analysis/dependenceAnalysis/: DependenceAnalysis.hpp  dpaUtils.hpp
include/pass/optimize/: ADCE.hpp  AG2L.hpp  DAE.hpp  DCE.hpp  DLAE.hpp  DLE.hpp  DSE.hpp  DeadLoopElimination.hpp  GCM.hpp  GVN.hpp  GepSplit.hpp  GlobalToLocal.hpp  SCCP.hpp  SCEV.hpp  SCP.hpp  SROA.hpp  TCO.hpp  indvarEndvarRepl.hpp  inline.hpp  licm.hpp  loopdivest.hpp  loopsimplify.hpp  loopsplit.hpp  loopunroll.hpp  mem2reg.hpp  optimize.hpp  reassociate.hpp  reg2mem.hpp  simplifyCFG.hpp
include/pass/optimize/InstCombine/: ArithmeticReduce.hpp
include/pass/optimize/Loop/: LoopBodyExtract.hpp  LoopInterChange.hpp  LoopParallel.hpp  LoopUtils.hpp  ParallelBodyExtract.hpp
include/pass/optimize/Misc/: BlockSort.hpp  StatelessCache.hpp
include/pass/optimize/Utils/: BlockUtils.hpp  PatternMatch.hpp
include/support/: Bits.hpp  FileSystem.hpp  Graph.hpp  Hyperparameters.hpp  Profiler.hpp  StaticReflection.hpp  arena.hpp  config.hpp  utils.hpp
include/visitor/: visitor.hpp
scripts/: antlr4cpp.sh  cleanshell.sh  install.sh  testall.sh  visionfive.sh
src/: CMakeLists.txt  driver.cpp  main.cpp
src/antlr4/: CMakeLists.txt  SysY.g4
src/ir/: CMakeLists.txt  ConstantReplace.cpp  ConstantValue.cpp  InstCopy.cpp  builder.cpp  function.cpp  global.cpp  infrast.cpp  instructions.cpp  module.cpp  type.cpp  value.cpp
src/mir/: CFGAnalysis.cpp  CMakeLists.txt  InstSelect.cpp  LiveInterval.cpp  LoweringContext.cpp  Peephole.cpp  RegisterCoalescing.cpp  SimplifyCFG.cpp  instinfo.cpp  lowering.cpp  mir.cpp  registerinfo.cpp  stackallocation.cpp  utils.cpp
src/mir/RegisterAllocator/: FastAllocator.cpp  GraphColoringRegisterAllocation.cpp  IPRAUsageInfo.cpp  InterferenceGraph.cpp  MixedRegisterAllocator.cpp
src/mir/Scheduler/: BlockLayoutOpt.cpp  InterBlockScheduler.cpp  IntraBlockScheduler.cpp  Schedule.cpp
src/pass/: AnalysisInfo.cpp  CMakeLists.txt  pass.cpp
src/pass/analysis/: CFGAnalysis.cpp  CFGPrinter.cpp  CMakeLists.txt  ControlFlowGraph.cpp  MarkParallel.cpp  SideEffectAnalysis.cpp  callgraph.cpp  dom.cpp  indvar.cpp  irtest.cpp  loop.cpp  pdom.cpp
src/pass/analysis/dependenceAnalysis/: DependenceAnalysis.cpp  dpaUtils.cpp
src/pass/optimize/: CMakeLists.txt  mem2reg.cpp  reg2mem.cpp
src/pass/optimize/CFG/: simplifyCFG.cpp
src/pass/optimize/DCE/: ADCE.cpp  DAE.cpp  DCE.cpp  DLAE.cpp  DLE.cpp  DSE.cpp  DeadLoopElimination.cpp
src/pass/optimize/IPO/: TCO.cpp  inline.cpp
src/pass/optimize/InstCombine/: ArithmeticReduce.cpp
src/pass/optimize/Loop/: LoopBodyExtract.cpp  LoopDivest.cpp  LoopInterChange.cpp  LoopParallel.cpp  LoopSimplify.cpp  LoopSplit.cpp  LoopUnroll.cpp  LoopUtils.cpp  ParallelBodyExtract.cpp
src/pass/optimize/Misc/: BlockSort.cpp  GepSplit.cpp  StatelessCache.cpp  indvarEndvarRepl.cpp
src/pass/optimize/Scalar/: AG2L.cpp  GCM.cpp  GVN.cpp  GlobalToLocal.cpp  LICM.cpp  Reassociate.cpp  SCCP.cpp  SCEV.cpp  SCP.cpp  SROA.cpp
src/pass/optimize/Utils/: BlockUtils.cpp
src/runtime/: Lookup.cpp  RuntimeWithParallelFor.hpp  compile.py  memset.cpp  test.cpp
src/runtime/LoopLib/: LoopLib.cpp  LoopLib.hpp
src/runtime/LoopParallel/: LoopParallel.cpp  LoopParallel.hpp  cmmcLoopParallel.cpp  test.cpp
src/runtime/MultiThreads/: MultiThreads.cpp  MultiThreads.hpp  test.cpp
src/support/: CMakeLists.txt  FileSystem.cpp  Graph.cpp  Profiler.cpp  arena.cpp  config.cpp
src/visitor/: CMakeLists.txt  visitCall.cpp  visitCompUnit.cpp  visitDecl.cpp  visitExp.cpp  visitFunc.cpp  visitStmt.cpp
submit/: CMakeLists.txt  Makefile  Test.py  TestResult.py  compile.py  docker.sh  file_filter.py  header_fix.py  run.py  run_visionfive.py  runtest.py  sync_repo.sh  utils.py
test/creduce/: creduce.sh
test/csmith/: csmith.sh
test/link/: cmmcParallelFor.cpp  cmmcParallelFor.ll  link.c  link.ll  lookup.cpp  lookup.ll  memset.c  parallelFor.cpp  parallelFor.ll  sy.h  test_memset.c
test/sysy/: sylib.c
